--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -37,4 +37,13 @@
 		<url-pattern>/fetch</url-pattern>
 	</servlet-mapping>
 	
+  	<servlet>
+		<servlet-name>FetchGameName</servlet-name>
+		<servlet-class>elec3610.servlet.FetchGameNameServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>FetchGameName</servlet-name>
+		<url-pattern>/fetchgamename</url-pattern>
+	</servlet-mapping>
+	
 </web-app>
